# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  conftest.py  manage.py  pyproject.toml  rollbar_middleware.py  ruff.toml
.github/workflows/: pyci.yml
locale/: messages.mo
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py  0004_alter_status_name.py  0005_status_creator.py
task_manager/tags/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/tags/fixtures/: tags.json
task_manager/tags/migrations/: 0001_initial.py  0002_alter_tag_created_at_alter_tag_name_and_more.py  0003_tag_creator.py
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_status.py  0004_alter_task_author_alter_task_created_at_and_more.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/label/: create.html  edit.html  index.html  label_confirm_delete.html
task_manager/templates/labels/: create.html  edit.html  index.html  label_confirm_delete.html  label_form.html
task_manager/templates/status/: create.html  edit.html  index.html  status_confirm_delete.html
task_manager/templates/statuses/: create.html  delete.html  edit.html  index.html  status_confirm_delete.html  status_form.html  update.html
task_manager/templates/tags/: create.html  delete.html  index.html  tag_form.html  update.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
(+33 files in other folders)
