[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager this is a task management system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-bootstrap5>=25.2",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
    "ruff>=0.13.0",
]

[tool.setuptools]
packages = ["task_manager"]

[tool.setuptools.package-dir]
task_manager = "task_manager"
