[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager this is a task management system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-bootstrap5>=25.2",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db -v"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-base-url>=2.1.0",
    "pytest-django>=4.11.1",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
    "pytest-playwright>=0.7.1",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
